# iso2god-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
examples/: dump.rs  dump_logo.rs  list_files.rs  list_files_new.rs  nxeart.rs
examples/game_title/: main.rs  unity.rs
src/: game_list.rs  god.rs  iso.rs  iso_fs.rs  lib.rs  main.rs  unity.rs  xex.rs
src/executable/: mod.rs  xbe.rs  xex.rs
src/game_list/: generate.bash  mod.rs  titles.jsonl
src/god/: con_header.rs  file_layout.rs  gdf_sector.rs  hash_list.rs  mod.rs
src/iso/: directory_table.rs  iso_type.rs  mod.rs  volume_descriptor.rs
src/new/: gdfx.rs  io.rs  iso.rs  mod.rs  read_slice.rs  stfs.rs  xex.rs
