[package]
name = "iso2god"
version = "1.5.4"
description = "A tool to convert between Xbox 360 ISO and Games On Demand file formats"
repository = "https://github.com/iliazeus/iso2god-rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
bitflags = "2.6.0"
byteorder = "1.5.0"
clap = { version = "4.5.19", features = ["derive"] }
num = "0.4.3"
num_enum = "0.7.3"
sha1 = "0.10.6"

[dev-dependencies]
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.128"

[profile.release]
strip = true
lto = true
